...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.awayphone.AwayPhoneController">


    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/startAwayPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/whitelist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:backgroundTint="@color/colorPurple"
        android:text="查看APP白名单"
        android:textColor="@color/RGB_FFFFFF"
...
