...
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/strict_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/focus" />

    <TextView
        android:id="@+id/normal_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/normal_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/normal" />

    <ImageView
        android:id="@+id/normal"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="176dp"
...
