<resources>
    <string name="app_name">时间管理</string>
    <string name="edit_message">enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_friendlist">friendlist</string>
    <string name="title_profile">Profile</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_settings">setting</string>
    <string name="alarm">设定闹钟</string>
    <string name="away_phone">远离手机</string>
    <string name="focus_strict">FOCUS</string>
    <string name="focus_normal">NORMAL</string>
    <string name="strict_description">不允许使用任何APP</string>
    <string name="normal_description">允许使用白名单中的APP</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Signin</string>
    <string name="prompt_email">账户名</string>
    <string name="prompt_password">密码</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="prompt_confirm_password">确认密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="welcome">"登陆成功 !"</string>
    <string name="register_success">"注册成功 !"</string>
    <string name="invalid_username">用户名为空或者邮箱格式不对!</string>
    <string name="invalid_email">邮箱格式不对!</string>
    <string name="invalid_password">密码必须由字母、数字组成，区分大小写;密码长度为8-18位</string>
    <string name="invalid_password1">密码不能为空</string>
    <string name="invalid_password_again">两次密码不一致</string>
    <string name="invalid_phone">手机号码不合规范</string>
    <string name="login_failed">"登入失败"</string>
    <string name="Login">登入</string>
    <string name="logout">登出</string>
    <string name="submit">提交</string>
    <string name="dashboard_all">全部</string>
    <string name="dashboard_alarm">自设闹钟</string>
    <string name="dashboard_awayphone">远离手机</string>
    <string name="dashboard_friendalarm">好友闹钟</string>
    <string name="todo">待办</string>
    <string name="待完成">待完成</string>
    <string name="已完成">已完成</string>
    <string name="未完成">未完成</string>
    <string name="查看详情">查看详情</string>
    <string name="深度模式">深度模式</string>
    <string name="pause_timer">Pause Timer</string>
    <string name="resume_timer">Resume Timer</string>
    <string name="text_back">返回</string>
    <string name="text_forward">提交</string>
    <string name="App_title">时间管理</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="proverb1">时间和潮流永远不待人。——司各特</string>
    <string name="register_failed">注册失败</string>

</resources>