<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.Analyze">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_analyze"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="总览" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="周" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="月" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="年" />
    </com.google.android.material.tabs.TabLayout>
<ScrollView
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="48dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/chart1"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <com.github.aachartmodel.aainfographics.aachartcreator.AAChartView
                android:id="@+id/aa_chart_view"
                android:layout_width="350dp"
                android:layout_height="250dp"
                android:layout_gravity="center|center_vertical">

            </com.github.aachartmodel.aainfographics.aachartcreator.AAChartView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/chart2"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="vertical">

            <com.github.aachartmodel.aainfographics.aachartcreator.AAChartView
                android:id="@+id/aa_chart_view1"
                android:layout_width="350dp"
                android:layout_height="250dp"
                android:layout_gravity="center|center_vertical">

            </com.github.aachartmodel.aainfographics.aachartcreator.AAChartView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/chart3"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="vertical">

            <com.github.aachartmodel.aainfographics.aachartcreator.AAChartView
                android:id="@+id/aa_chart_view2"
                android:layout_width="350dp"
                android:layout_height="250dp"
                android:layout_gravity="center|center_vertical">

            </com.github.aachartmodel.aainfographics.aachartcreator.AAChartView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>