<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="首页" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="任务" />

    <item
        android:id="@+id/navigation_friendlist"
        android:icon="@drawable/ic_baseline_supervised_user_circle_36"
        android:title="好友" />
    <item
        android:id="@+id/navigation_proflie"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="我的" />

</menu>